@@ -8,20 +8,16 @@ import com.notes.scheduled.model.old.Notes;
 import com.notes.scheduled.repository.CompanyUserRepository;
 import com.notes.scheduled.repository.PatientNoteRepository;
 import com.notes.scheduled.repository.PatientProfileRepository;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 public class ImportService {
-
-    private static final Logger logger = LoggerFactory.getLogger(ImportService.class);
 
     private final CompanyUserRepository companyUserRepository;
     private final PatientProfileRepository patientProfileRepository;
@@ -37,50 +33,38 @@ public class ImportService {
 
     @Scheduled(fixedRate = 10000)
     public void importData() {
-        logger.info("Starting data import from old system to new system");
+        Client[] clients = restTemplate.getForObject("http://localhost:8080/clients", Client[].class);
 
-        try {
-            Client[] clients = restTemplate.getForObject("http://localhost:8080/clients", Client[].class);
+        if (clients != null) {
+            List<String> activeGuids = Stream.of(clients)
+                    .filter(client -> "ACTIVE".equalsIgnoreCase(client.getStatus()))
+                    .map(Client::getGuid)
+                    .toList();
 
-            if (clients != null) {
-                List<String> activeGuids = List.of(clients)
-                        .stream()
-                        .filter(client -> "ACTIVE".equalsIgnoreCase(client.getStatus()))
-                        .map(Client::getGuid)
-                        .collect(Collectors.toList());
+            List<PatientProfile> inactiveProfiles = patientProfileRepository.findAll()
+                    .stream()
+                    .filter(profile -> !activeGuids.contains(profile.getOldClientGuid()))
+                    .toList();
 
-                // Удаление неактивных профилей и связанных заметок
-                List<PatientProfile> inactiveProfiles = patientProfileRepository.findAll()
-                        .stream()
-                        .filter(profile -> !activeGuids.contains(profile.getOldClientGuid()))
-                        .collect(Collectors.toList());
+            deleteInactiveProfiles(inactiveProfiles);
 
-                for (PatientProfile profile : inactiveProfiles) {
-                    // Удаление связанных заметок
-                    List<PatientNote> notes = patientNoteRepository.findByPatientId(profile.getId());
-                    patientNoteRepository.deleteAll(notes);
-
-                    // Удаление профиля пациента
-                    patientProfileRepository.delete(profile);
-                    logger.info("Deleted inactive patient profile with oldClientGuid: {}", profile.getOldClientGuid());
-                }
-
-                for (Client client : clients) {
-                    if ("ACTIVE".equalsIgnoreCase(client.getStatus())) {
-                        importClient(client);
-                    } else {
-                        logger.info("Skipping client with guid: {} because status is not Active", client.getGuid());
-                    }
+            for (Client client : clients) {
+                if ("ACTIVE".equalsIgnoreCase(client.getStatus())) {
+                    importClient(client);
                 }
             }
-
-            logger.info("Data import completed successfully");
-        } catch (Exception e) {
-            logger.error("Error during data import", e);
         }
     }
 
-    private void importClient(Client client) {
+    public void deleteInactiveProfiles(List<PatientProfile> inactiveProfiles) {
+        for (PatientProfile profile : inactiveProfiles) {
+            List<PatientNote> notes = patientNoteRepository.findByPatientId(profile.getId());
+            patientNoteRepository.deleteAll(notes);
+            patientProfileRepository.delete(profile);
+        }
+    }
+
+    public void importClient(Client client) {
         Optional<PatientProfile> patientProfileOptional = patientProfileRepository.findByOldClientGuidContaining(client.getGuid());
         PatientProfile patientProfile;
 
@@ -98,7 +82,7 @@ public class ImportService {
         }
     }
 
-    private PatientProfile createPatientProfile(Client client) {
+    public PatientProfile createPatientProfile(Client client) {
         PatientProfile patientProfile = new PatientProfile();
         patientProfile.setFirstName(client.getFirstName());
         patientProfile.setLastName(client.getLastName());
@@ -107,14 +91,32 @@ public class ImportService {
         return patientProfileRepository.save(patientProfile);
     }
 
-    private void updatePatientProfile(PatientProfile patientProfile, Client client) {
-        patientProfile.setFirstName(client.getFirstName());
-        patientProfile.setLastName(client.getLastName());
-        patientProfile.setStatusId(getStatusId(client.getStatus()));
-        patientProfileRepository.save(patientProfile);
+    public void updatePatientProfile(PatientProfile patientProfile, Client client) {
+        boolean isUpdated = false;
+
+        if (!patientProfile.getFirstName().equals(client.getFirstName())) {
+            patientProfile.setFirstName(client.getFirstName());
+            isUpdated = true;
+        }
+
+        if (!patientProfile.getLastName().equals(client.getLastName())) {
+            patientProfile.setLastName(client.getLastName());
+            isUpdated = true;
+        }
+
+        Short newStatusId = getStatusId(client.getStatus());
+        if (!patientProfile.getStatusId().equals(newStatusId)) {
+            patientProfile.setStatusId(newStatusId);
+            isUpdated = true;
+        }
+
+        if (isUpdated) {
+            patientProfileRepository.save(patientProfile);
+        }
     }
 
-    private Short getStatusId(String status) {
+
+    public Short getStatusId(String status) {
         return switch (status) {
             case "ACTIVE" -> 200;
             case "INACTIVE" -> 210;
@@ -123,7 +125,7 @@ public class ImportService {
         };
     }
 
-    private void importNote(Notes note, PatientProfile patientProfile) {
+    public void importNote(Notes note, PatientProfile patientProfile) {
         Optional<CompanyUser> companyUserOptional = companyUserRepository.findByLogin(note.getLoggedUser());
         CompanyUser companyUser;
         companyUser = companyUserOptional.orElseGet(() -> createCompanyUser(note.getLoggedUser()));
@@ -136,17 +138,16 @@ public class ImportService {
         } else {
             patientNote = createPatientNote(note, patientProfile, companyUser);
             patientNoteRepository.save(patientNote);
-            logger.info("Imported note with guid: {}", note.getGuid());
         }
     }
 
-    private CompanyUser createCompanyUser(String login) {
+    public CompanyUser createCompanyUser(String login) {
         CompanyUser companyUser = new CompanyUser();
         companyUser.setLogin(login);
         return companyUserRepository.save(companyUser);
     }
 
-    private PatientNote createPatientNote(Notes note, PatientProfile patientProfile, CompanyUser companyUser) {
+    public PatientNote createPatientNote(Notes note, PatientProfile patientProfile, CompanyUser companyUser) {
         PatientNote patientNote = new PatientNote();
         patientNote.setNote(note.getComments());
         patientNote.setCreatedDateTime(note.getCreatedDateTime());
@@ -157,13 +158,12 @@ public class ImportService {
         return patientNote;
     }
 
-    private void updatePatientNote(PatientNote patientNote, Notes note, CompanyUser companyUser) {
+    public void updatePatientNote(PatientNote patientNote, Notes note, CompanyUser companyUser) {
         if (note.getModifiedDateTime().isAfter(patientNote.getLastModifiedDateTime())) {
             patientNote.setNote(note.getComments());
             patientNote.setLastModifiedDateTime(note.getModifiedDateTime());
             patientNote.setLastModifiedByUser(companyUser);
             patientNoteRepository.save(patientNote);
-            logger.info("Updated note with guid: {}", note.getGuid());
         }
     }
 }
